[CLI][TSSDK] FFI Integration between aptos CLI and Typescript SDK (#7968)
* create extern func - POC version

* first attemp for bridging

* added example to run CLI from node

* update call_aptos_cli file

* finalize call rust from ts example - non-asyn example

* move FFI functions to separate file

--- a/ecosystem/typescript/sdk/examples/typescript/package.json
+++ b/ecosystem/typescript/sdk/examples/typescript/package.json
@@ -10,16 +10,20 @@
     "simple_nft": "ts-node simple_nft.ts",
     "transfer_coin": "ts-node transfer_coin.ts",
     "test": "run-s bcs_transaction multisig_transaction simple_nft transfer_coin",
-    "your_coin": "ts-node your_coin.ts"
+    "your_coin": "ts-node your_coin.ts",
+    "call_aptos_cli": "ts-node call_aptos_cli.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "aptos": "latest",
-    "dotenv": "16.0.1"
+    "dotenv": "16.0.1",
+    "ffi-napi": "^4.0.3",
+    "ref-array-di": "^1.2.2"
   },
   "devDependencies": {
+    "@types/ffi-napi": "^4.0.7",
     "@types/node": "18.6.2",
     "npm-run-all": "4.1.5",
     "ts-node": "10.9.1",
