--- a/state-sync/storage-service/server/Cargo.toml
+++ b/state-sync/storage-service/server/Cargo.toml
@@ -38,6 +38,7 @@ anyhow = { workspace = true }
 aptos-bitvec = { workspace = true }
 aptos-config = { workspace = true, features = ["fuzzing"] }
 aptos-crypto = { workspace = true }
+aptos-netcore = { workspace = true }
 aptos-storage-interface = { workspace = true }
 aptos-time-service = { workspace = true, features = ["async", "testing"] }
 aptos-types = { workspace = true }
