[Github Actions] Skip expensive tests on docs changes.

--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -24,6 +24,33 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  # This job determines which files were changed
+  file_change_determinator:
+    runs-on: ubuntu-latest
+    outputs:
+      only_docs_changed: ${{ steps.determine_file_changes.outputs.only_docs_changed }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Run the file change determinator
+        id: determine_file_changes
+        uses: ./.github/actions/file-change-determinator
+
+  # Run all general lints (i.e., non-rust and docs lints). This will be a PR required job.
+  general-lints:
+    needs: file_change_determinator
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        if: needs.file_change_determinator.outputs.only_docs_changed != 'true'
+      - name: Run general lints
+        uses: ./.github/actions/general-lints
+        if: needs.file_change_determinator.outputs.only_docs_changed != 'true'
+        with:
+          GIT_CREDENTIALS: ${{ secrets.GIT_CREDENTIALS }}
+      - run: echo "Skipping general lints! Unrelated changes detected."
+        if: needs.file_change_determinator.outputs.only_docs_changed == 'true'
+
+  # TODO: remove this once the new jobs land
   scripts-lint:
     runs-on: ubuntu-latest
     steps:
@@ -31,6 +58,7 @@ jobs:
       - run: sudo apt-get install shellcheck --assume-yes --no-install-recommends
       - run: shellcheck scripts/dev_setup.sh
 
+  # TODO: remove this once the new jobs land
   ecosystem-lint:
     runs-on: ubuntu-latest
     steps:
@@ -49,6 +77,7 @@ jobs:
       - run: cd ./ecosystem/typescript/sdk && pnpm lint
       - run: cd ./ecosystem/typescript/sdk && pnpm fmt:check
 
+  # TODO: remove this once the new jobs land
   ecosystem-python-lint:
     runs-on: ubuntu-latest
     steps:
@@ -58,6 +87,7 @@ jobs:
           pyproject_directory: ecosystem/python/sdk
       - run: make -C ecosystem/python/sdk fmt && ./scripts/fail_if_modified_files.sh
 
+  # Run the docs linter. This is a PR required job.
   docs-lint:
     runs-on: ubuntu-latest
     steps:
@@ -66,15 +96,17 @@ jobs:
         with:
           node-version-file: .node-version
       - uses: pnpm/action-setup@v2
-
       - run: pnpm lint
         working-directory: developer-docs-site
       - run: sudo apt update -y && sudo apt install -y aspell aspell-en
       - run: pnpm spellcheck
         working-directory: developer-docs-site
 
+  # Run the crypto hasher domain separation checks
   rust-cryptohasher-domain-separation-check:
+    needs: file_change_determinator
     runs-on: high-perf-docker
+    if: needs.file_change_determinator.outputs.only_docs_changed != 'true'
     steps:
       - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3
       - uses: actions/setup-python@13ae5bb136fac2878aff31522b9efb785519f984
@@ -83,6 +115,52 @@ jobs:
           GIT_CREDENTIALS: ${{ secrets.GIT_CREDENTIALS }}
       - run: python3 scripts/check-cryptohasher-symbols.py
 
+  # Run all rust lints. This will be a PR required job.
+  rust-lints:
+    needs: file_change_determinator
+    runs-on: high-perf-docker
+    steps:
+      - uses: actions/checkout@v3
+        if: needs.file_change_determinator.outputs.only_docs_changed != 'true'
+      - name: Run rust lints
+        uses: ./.github/actions/rust-lints
+        if: needs.file_change_determinator.outputs.only_docs_changed != 'true'
+        with:
+          GIT_CREDENTIALS: ${{ secrets.GIT_CREDENTIALS }}
+      - run: echo "Skipping rust lints! Unrelated changes detected."
+        if: needs.file_change_determinator.outputs.only_docs_changed == 'true'
+
+  # Run all rust smoke tests. This will be a PR required job.
+  rust-smoke-tests:
+    needs: file_change_determinator
+    runs-on: high-perf-docker
+    steps:
+      - uses: actions/checkout@v3
+        if: needs.file_change_determinator.outputs.only_docs_changed != 'true'
+      - name: Run rust smoke tests
+        uses: ./.github/actions/rust-smoke-tests
+        if: needs.file_change_determinator.outputs.only_docs_changed != 'true'
+        with:
+          GIT_CREDENTIALS: ${{ secrets.GIT_CREDENTIALS }}
+      - run: echo "Skipping rust smoke tests! Unrelated changes detected."
+        if: needs.file_change_determinator.outputs.only_docs_changed == 'true'
+
+  # Run all rust unit tests. This will be a PR required job.
+  rust-unit-tests:
+    needs: file_change_determinator
+    runs-on: high-perf-docker
+    steps:
+      - uses: actions/checkout@v3
+        if: needs.file_change_determinator.outputs.only_docs_changed != 'true'
+      - name: Run rust unit tests
+        uses: ./.github/actions/rust-unit-tests
+        if: needs.file_change_determinator.outputs.only_docs_changed != 'true'
+        with:
+          GIT_CREDENTIALS: ${{ secrets.GIT_CREDENTIALS }}
+      - run: echo "Skipping rust unit tests! Unrelated changes detected."
+        if: needs.file_change_determinator.outputs.only_docs_changed == 'true'
+
+  # TODO: remove this once the new jobs land
   rust-lint:
     runs-on: high-perf-docker
     steps:
@@ -94,6 +172,7 @@ jobs:
       - run: cargo install cargo-sort
       - run: scripts/rust_lint.sh --check
 
+  # TODO: remove this once the new jobs land
   rust-doc-test:
     runs-on: high-perf-docker
     steps:
@@ -105,6 +184,7 @@ jobs:
           GIT_CREDENTIALS: ${{ secrets.GIT_CREDENTIALS }}
       - run: cargo test --locked --doc --workspace --exclude aptos-node-checker
 
+  # TODO: remove this once the new jobs land
   rust-unit-test:
     runs-on: high-perf-docker
     steps:
@@ -130,10 +210,10 @@ jobs:
           DOTNET_ROOT: /home/runner/.dotnet
           BOOGIE_EXE: /home/runner/.dotnet/tools/boogie
 
+  # Run the consensus only unit tests
   rust-consensus-only-unit-test:
     runs-on: high-perf-docker
-    if: |
-      contains(github.event.pull_request.labels.*.name, 'CICD:build-consensus-only-image')
+    if: contains(github.event.pull_request.labels.*.name, 'CICD:build-consensus-only-image')
     steps:
       - uses: actions/checkout@v3
         with:
@@ -148,8 +228,10 @@ jobs:
         env:
           RUST_MIN_STACK: 4297152
 
+  # Run the rust network performance unit tests
   rust-network-perf-unit-test:
     runs-on: high-perf-docker
+    if: contains(github.event.pull_request.labels.*.name, 'CICD:build-consensus-only-image')
     steps:
       - uses: actions/checkout@v3
         with:
@@ -164,6 +246,7 @@ jobs:
           cargo nextest run --locked -p aptos-peer-monitoring-service-client --no-fail-fast -F network-perf-test
           cargo nextest run --locked -p aptos-peer-monitoring-service-server --no-fail-fast -F network-perf-test
 
+  # TODO: remove this once the new jobs land
   rust-smoke-test:
     runs-on: high-perf-docker
     steps:
@@ -194,9 +277,10 @@ jobs:
             !/tmp/.tmp*/**/db/
           retention-days: 14
 
+  # Run the consensus only smoke test
   rust-consensus-only-smoke-test:
     runs-on: high-perf-docker
-    if: ${{ !github.ref || github.ref != 'aptos-node-v1.2.0' }}
+    if: contains(github.event.pull_request.labels.*.name, 'CICD:build-consensus-only-image')
     steps:
       - uses: actions/checkout@v3
       - uses: aptos-labs/aptos-core/.github/actions/rust-setup@main
@@ -221,8 +305,10 @@ jobs:
             !/tmp/.tmp*/**/db/
           retention-days: 14
 
+  # Run the network performance smoke test
   rust-network-perf-smoke-test:
     runs-on: high-perf-docker
+    if: contains(github.event.pull_request.labels.*.name, 'CICD:build-consensus-only-image')
     steps:
       - uses: actions/checkout@v3
       - uses: aptos-labs/aptos-core/.github/actions/rust-setup@main
@@ -247,6 +333,7 @@ jobs:
             !/tmp/.tmp*/**/db/
           retention-days: 14
 
+  # TODO: remove this once the new jobs land
   check-vm-features:
     runs-on: high-perf-docker
     steps:
@@ -256,5 +343,6 @@ jobs:
           GIT_CREDENTIALS: ${{ secrets.GIT_CREDENTIALS }}
       - run: cargo test --locked --features check-vm-features -p aptos-node
 
+  # TODO: remove this once the new jobs land
   python-lint-test:
     uses: ./.github/workflows/python-lint-test.yaml
